// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload demo -- accept 1`] = `
.c1 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #FFF;
  border-color: #4683e6;
  background-color: #4683e6;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c1:hover {
  background-color: #3664c8;
}

.c1[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c5 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #6b798e;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c2 {
  margin-left: 5px;
}

.c3 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c4 {
  border: none;
}

<div>
  <div
    class="c0"
  >
    <input
      accept="image/* , .pdf"
      hidden=""
      type="file"
    />
    <button
      class="c1"
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        你还未上传任何内容
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- base 1`] = `
.c1 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #FFF;
  border-color: #4683e6;
  background-color: #4683e6;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c1:hover {
  background-color: #3664c8;
}

.c1[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c5 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #6b798e;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c2 {
  margin-left: 5px;
}

.c3 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c4 {
  border: none;
}

<div>
  <div
    class="c0"
  >
    <input
      hidden=""
      type="file"
    />
    <button
      class="c1"
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        你还未上传任何内容
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- controlled 1`] = `
.c1 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #FFF;
  border-color: #4683e6;
  background-color: #4683e6;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c1:hover {
  background-color: #3664c8;
}

.c1[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c5 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #6b798e;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c7 {
  display: table-cell;
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c2 {
  margin-left: 5px;
}

.c3 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c8 {
  vertical-align: baseline;
  margin-left: 5px;
  cursor: pointer;
}

.c4 {
  border: none;
}

<div>
  <div
    class="c0"
  >
    <input
      hidden=""
      type="file"
    />
    <button
      class="c1"
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        <a>
          file1
        </a>
      </div>
      <div
        class="c7"
      >
        <i
          class="icon__cross c8 "
        />
      </div>
    </div>
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        <a>
          file2
        </a>
      </div>
      <div
        class="c7"
      >
        <i
          class="icon__cross c8 "
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- disabled 1`] = `
.c1 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #FFF;
  border-color: #4683e6;
  background-color: #4683e6;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c1:hover {
  background-color: #3664c8;
}

.c1[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c5 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #6b798e;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c0 {
  display: inline-block;
  cursor: pointer;
  pointer-events: none;
}

.c2 {
  margin-left: 5px;
}

.c3 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c4 {
  border: none;
}

<div>
  <div
    class="c0"
    disabled=""
  >
    <input
      disabled=""
      hidden=""
      type="file"
    />
    <button
      class="c1"
      disabled=""
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        你还未上传任何内容
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- handleUpload 1`] = `
.c1 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #FFF;
  border-color: #4683e6;
  background-color: #4683e6;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c1:hover {
  background-color: #3664c8;
}

.c1[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c5 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #6b798e;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c2 {
  margin-left: 5px;
}

.c3 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c4 {
  border: none;
}

<div>
  <div
    class="c0"
  >
    <input
      hidden=""
      multiple=""
      type="file"
    />
    <button
      class="c1"
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        你还未上传任何内容
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- listType 1`] = `
.c1 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #FFF;
  border-color: #4683e6;
  background-color: #4683e6;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c1:hover {
  background-color: #3664c8;
}

.c1[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c2 {
  margin-left: 5px;
}

<div>
  <div
    class="c0"
  >
    <input
      hidden=""
      type="file"
    />
    <button
      class="c1"
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
</div>
`;

exports[`Upload demo -- maxCount 1`] = `
.c1 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #FFF;
  border-color: #4683e6;
  background-color: #4683e6;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c1:hover {
  background-color: #3664c8;
}

.c1[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c5 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #6b798e;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c2 {
  margin-left: 5px;
}

.c3 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c4 {
  border: none;
}

<div>
  <div
    class="c0"
  >
    <input
      hidden=""
      multiple=""
      type="file"
    />
    <button
      class="c1"
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        你还未上传任何内容
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- maxSize 1`] = `
.c1 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #FFF;
  border-color: #4683e6;
  background-color: #4683e6;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c1:hover {
  background-color: #3664c8;
}

.c1[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c5 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #6b798e;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c2 {
  margin-left: 5px;
}

.c3 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c4 {
  border: none;
}

<div>
  <div
    class="c0"
  >
    <input
      hidden=""
      type="file"
    />
    <button
      class="c1"
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        你还未上传任何内容
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- multiple 1`] = `
.c1 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #FFF;
  border-color: #4683e6;
  background-color: #4683e6;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c1:hover {
  background-color: #3664c8;
}

.c1[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c5 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #6b798e;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c2 {
  margin-left: 5px;
}

.c3 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c4 {
  border: none;
}

<div>
  <div
    class="c0"
  >
    <input
      hidden=""
      multiple=""
      type="file"
    />
    <button
      class="c1"
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        你还未上传任何内容
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- onAdd 1`] = `
.c1 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #FFF;
  border-color: #4683e6;
  background-color: #4683e6;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c1:hover {
  background-color: #3664c8;
}

.c1[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c5 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #6b798e;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c2 {
  margin-left: 5px;
}

.c3 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c4 {
  border: none;
}

<div>
  <div
    class="c0"
  >
    <input
      hidden=""
      multiple=""
      type="file"
    />
    <button
      class="c1"
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        你还未上传任何内容
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- onPreview 1`] = `
.c1 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #FFF;
  border-color: #4683e6;
  background-color: #4683e6;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c1:hover {
  background-color: #3664c8;
}

.c1[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c5 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #6b798e;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c2 {
  margin-left: 5px;
}

.c3 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c4 {
  border: none;
}

<div>
  <div
    class="c0"
  >
    <input
      hidden=""
      multiple=""
      type="file"
    />
    <button
      class="c1"
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        你还未上传任何内容
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- onRemove 1`] = `
.c1 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #FFF;
  border-color: #4683e6;
  background-color: #4683e6;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c1:hover {
  background-color: #3664c8;
}

.c1[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c5 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #6b798e;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c2 {
  margin-left: 5px;
}

.c3 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c4 {
  border: none;
}

<div>
  <div
    class="c0"
  >
    <input
      hidden=""
      multiple=""
      type="file"
    />
    <button
      class="c1"
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        你还未上传任何内容
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- readFile 1`] = `
.c1 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #FFF;
  border-color: #4683e6;
  background-color: #4683e6;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c1:hover {
  background-color: #3664c8;
}

.c1[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c5 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #6b798e;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c2 {
  margin-left: 5px;
}

.c3 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c4 {
  border: none;
}

<div>
  <div
    class="c0"
  >
    <input
      hidden=""
      type="file"
    />
    <button
      class="c1"
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        你还未上传任何内容
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- selector 1`] = `
.c3 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #6b798e;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c4 {
  display: table-cell;
  vertical-align: middle;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c1 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c2 {
  border: none;
}

<div>
  <div>
    <div
      class="c0"
    >
      <input
        hidden=""
        type="file"
      />
      <button>
        点我点我选
      </button>
    </div>
    <div
      class="c1"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          你还未上传任何内容
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- uncontrolled 1`] = `
.c1 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #FFF;
  border-color: #4683e6;
  background-color: #4683e6;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c1:hover {
  background-color: #3664c8;
}

.c1[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c5 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #6b798e;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c7 {
  display: table-cell;
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c2 {
  margin-left: 5px;
}

.c3 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c8 {
  vertical-align: baseline;
  margin-left: 5px;
  cursor: pointer;
}

.c4 {
  border: none;
}

<div>
  <div
    class="c0"
  >
    <input
      hidden=""
      type="file"
    />
    <button
      class="c1"
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        <a>
          defaultFile1
        </a>
      </div>
      <div
        class="c7"
      >
        <i
          class="icon__cross c8 "
        />
      </div>
    </div>
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        <a>
          defaultFile2
        </a>
      </div>
      <div
        class="c7"
      >
        <i
          class="icon__cross c8 "
        />
      </div>
    </div>
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        <a>
          defaultFile3
        </a>
      </div>
      <div
        class="c7"
      >
        <i
          class="icon__cross c8 "
        />
      </div>
    </div>
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        <a>
          defaultFile4
        </a>
      </div>
      <div
        class="c7"
      >
        <i
          class="icon__cross c8 "
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- upload 1`] = `
.c17 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #FFF;
  border-color: #4683e6;
  background-color: #4683e6;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c17:hover {
  background-color: #3664c8;
}

.c17[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c21 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #6b798e;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c22 {
  display: table-cell;
  vertical-align: middle;
}

.c16 {
  display: inline-block;
  cursor: pointer;
}

.c18 {
  margin-left: 5px;
}

.c19 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c20 {
  border: none;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c7 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  background: #ebedf0;
}

.c9 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c11 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c13 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c15 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  background-color: #e69b9b;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c6 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c6:hover {
  border-color: #4683e6;
}

.c6 .c12 {
  width: 20px;
  height: 20px;
}

.c6 .c14 {
  left: 13px;
  height: 10px;
}

.c6 .c8,
.c6 .c10 {
  line-height: 16px;
}

.c6 .c8 {
  padding-right: 20px;
}

.c6 .c10 {
  padding-left: 20px;
}

.c6 .c8 {
  display: none;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        disableAdd
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <span
              class="c8 c9"
            >
              ON
            </span>
            <span
              class="c10 c11"
            >
              OFF
            </span>
            <span
              class="c12 c13"
            >
              <span
                class="c14 c15"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        disableRemove
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <span
              class="c8 c9"
            >
              ON
            </span>
            <span
              class="c10 c11"
            >
              OFF
            </span>
            <span
              class="c12 c13"
            >
              <span
                class="c14 c15"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        multiple
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <span
              class="c8 c9"
            >
              ON
            </span>
            <span
              class="c10 c11"
            >
              OFF
            </span>
            <span
              class="c12 c13"
            >
              <span
                class="c14 c15"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <span
              class="c8 c9"
            >
              ON
            </span>
            <span
              class="c10 c11"
            >
              OFF
            </span>
            <span
              class="c12 c13"
            >
              <span
                class="c14 c15"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        enablePreview
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <span
              class="c8 c9"
            >
              ON
            </span>
            <span
              class="c10 c11"
            >
              OFF
            </span>
            <span
              class="c12 c13"
            >
              <span
                class="c14 c15"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        onlyAcceptImage
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <span
              class="c8 c9"
            >
              ON
            </span>
            <span
              class="c10 c11"
            >
              OFF
            </span>
            <span
              class="c12 c13"
            >
              <span
                class="c14 c15"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        maxSize
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <span
              class="c8 c9"
            >
              ON
            </span>
            <span
              class="c10 c11"
            >
              OFF
            </span>
            <span
              class="c12 c13"
            >
              <span
                class="c14 c15"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        maxCount
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <span
              class="c8 c9"
            >
              ON
            </span>
            <span
              class="c10 c11"
            >
              OFF
            </span>
            <span
              class="c12 c13"
            >
              <span
                class="c14 c15"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        customSelector
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <span
              class="c8 c9"
            >
              ON
            </span>
            <span
              class="c10 c11"
            >
              OFF
            </span>
            <span
              class="c12 c13"
            >
              <span
                class="c14 c15"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        hideList
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <span
              class="c8 c9"
            >
              ON
            </span>
            <span
              class="c10 c11"
            >
              OFF
            </span>
            <span
              class="c12 c13"
            >
              <span
                class="c14 c15"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div>
      <div
        class="c16"
      >
        <input
          hidden=""
          type="file"
        />
        <button
          class="c17"
          type="button"
        >
          请选择文件
        </button>
        <span
          class="c18"
        >
          请选择符合规则的文件
        </span>
      </div>
      <div
        class="c19"
      >
        <div
          class="c20 c21"
        >
          <div
            class="c22"
          >
            你还未上传任何内容
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
